CSe trabaja en el nuevo login y registro de usuario, se añade tabla user a la consulta SQL

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
             <version>8.0.33</version>
         </dependency>
 
-        <!-- Lombok (opcional) -->
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -43,6 +43,13 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
+        </dependency>
+
+        <!-- Bcrypt para seguridad de contraseñs para el login  -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
         </dependency>
 
     </dependencies>
